# os

./: .gitignore
Lab2/: CMakeLists.txt
Lab2/include/: threads.h
Lab2/src/: main.cpp
Lab2/tests/: test.cpp
Lab3/: CMakeLists.txt
Lab3/include/: marker.h
Lab3/src/: main.cpp
Lab3/tests/: test_marker.cpp
Laba1/: CMakeLists.txt  README.md
Laba1/include/: employee.h
Laba1/src/: creator.cpp  employee.cpp  main.cpp  reporter.cpp
Laba1/tests/: test_employee.cpp
