cmake_minimum_required(VERSION 3.10)

project(Lab2_Threads LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(Lab2_Threads
    src/main.cpp
)

target_include_directories(Lab2_Threads PRIVATE include)

if (WIN32)
    target_link_libraries(Lab2_Threads PRIVATE
        user32
        kernel32
    )
endif()
